...
    Column(
        modifier = Modifier
            .fillMaxSize()
            .testTag("settings-page-online-sources"),
    ) {
        SettingsTopAppBar(
            title = "Online sources",
            backContentDescription = "Back to Settings",
            back = back,
        )
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
...
